--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -4,8 +4,9 @@ h1 {
 }
 
 img {
-  
-  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 250px;
   height: 250px;
   overflow: hidden;
