--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -8,6 +8,8 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
   width: 250px;
   height: 250px;
   border-radius: 100%;
