--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -5,8 +5,8 @@ h1 {
 }
 
 p {
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 3em;
+  margin-right: 3em;
   font-family: 'Montserrat';
 }
 
