--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -20,3 +20,14 @@ img {
   height: 250px;
   border-radius: 100%;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+div {
+  display: flex;
+  align-self: flex-end;
+}
+  
